@@ -1,5 +1,13 @@
 1.4.0-vcli-alpha Sara
 
+* Added method to the plugin interface
+
+	/** Sets the core configuration object to use.
+	 * 
+	 * @param cnf The core configuration object
+	 */
+	public void setCoreConfiguration ( CoreConfiguration cnf )
+	
 * Identified and fixed a potential concurrent problem with the consoles and the interactive run facility
 
 * Modified the engine to work with per flow output consoles
